--- a/bin/dune
+++ b/bin/dune
@@ -1,39 +1,3 @@
-(executable
- (public_name dec01)
- (name dec01)
- (libraries aoc24))
-
-(executable
- (public_name dec02)
- (name dec02)
- (libraries aoc24))
-
-(executable
- (public_name dec03)
- (name dec03)
- (libraries aoc24))
-
-(executable
- (public_name dec04)
- (name dec04)
- (libraries aoc24))
-
-(executable
- (public_name dec05)
- (name dec05)
- (libraries aoc24))
-
-(executable
- (public_name dec06)
- (name dec06)
- (libraries aoc24))
-
-(executable
- (public_name dec07)
- (name dec07)
- (libraries aoc24))
-
-(executable
- (public_name dec08)
- (name dec08)
+(executables
+ (public_names dec01 dec02 dec03 dec04 dec05 dec06 dec07 dec08)
  (libraries aoc24))
