--- a/bin/dune
+++ b/bin/dune
@@ -1,3 +1,3 @@
 (executables
- (public_names dec01 dec02 dec03 dec04 dec05 dec06 dec07 dec08 dec09)
+ (public_names dec01 dec02 dec03 dec04 dec05 dec06 dec07 dec08 dec09 dec10)
  (libraries aoc24))
