--- a/bin/dune
+++ b/bin/dune
@@ -1,3 +1,3 @@
 (executables
- (public_names dec01 dec02 dec03 dec04 dec05 dec06 dec07 dec08 dec09 dec10 dec11 dec12 dec13 dec14 dec15 dec16 dec17 dec18 dec19 dec20 dec21 dec22 dec23)
+ (public_names dec01 dec02 dec03 dec04 dec05 dec06 dec07 dec08 dec09 dec10 dec11 dec12 dec13 dec14 dec15 dec16 dec17 dec18 dec19 dec20 dec21 dec22 dec23 dec24 dec25)
  (libraries aoc24))
